fix load stand in events, added drilldown  for kpib3
